--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.alibaba</groupId>
         <artifactId>dubbo-parent</artifactId>
-        <version>2.8.4</version>
+        <version>2.8.4.1.jjs</version>
     </parent>
     <artifactId>dubbo</artifactId>
     <packaging>jar</packaging>
@@ -318,6 +318,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+		<dependency>
+			<groupId>com.github.sgroschupf</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.1</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
