--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<version>2.0</version> </parent> -->
 	<groupId>com.alibaba</groupId>
 	<artifactId>dubbo-parent</artifactId>
-	<version>2.8.4</version>
+	<version>2.8.4.1.jjs</version>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
 	<description>The parent project of dubbo</description>
@@ -52,7 +52,7 @@
 		<module>dubbo-simple</module>
 		<module>dubbo-admin</module>
 		<module>dubbo-demo</module>
-		<module>hessian-lite</module>
+		<!--<module>hessian-lite</module>-->
         <!--<module>dubbo-tool/dubbo-demo-lite-archetype</module>-->
 	</modules>
 	<profiles>
@@ -724,4 +724,15 @@
 			<timezone>+8</timezone>
 		</developer>
 	</developers>
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://172.16.7.251:8081/nexus/content/repositories/jjsrespo</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://172.16.7.251:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
