1、加入系统监控没有提供者的服务监控请求。 2、pom文件报错修改 3、加入 consumerApplication attachment 支持在服务端获取客户端应用名称。

--- a/pom.xml
+++ b/pom.xml
@@ -496,7 +496,7 @@
 				<configuration>
 					<useSystemClassLoader>true</useSystemClassLoader>
 					<forkMode>once</forkMode>
-					<argLine>${argline}</argLine>
+					<!--<argLine>${argline}</argLine>-->
 					<!--<systemProperties>
 						&lt;!&ndash; common shared &ndash;&gt;
 						<property>
@@ -600,9 +600,9 @@
 						<source>${java_source_version}</source>
 						<target>${java_target_version}</target>
 						<encoding>${file_encoding}</encoding>
-                       <compilerArgs>
+                      <!-- <compilerArgs>
                             <arg>-XX:MaxPermSize=512M</arg>
-                        </compilerArgs>
+                        </compilerArgs>-->
 					</configuration>
 				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings
