--- a/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
+++ b/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
@@ -1,3 +1,3 @@
-dubbo.registry.address=zookeeper://192.168.1.223:2181?backup=192.168.1.224:2181,192.168.1.225:2181
+dubbo.registry.address=zookeeper://172.16.2.86:2181
 dubbo.admin.root.password=root
 dubbo.admin.guest.password=guest
