--- a/dubbo-demo/dubbo-demo-provider/pom.xml
+++ b/dubbo-demo/dubbo-demo-provider/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.alibaba</groupId>
         <artifactId>dubbo-demo</artifactId>
-        <version>2.8.4.1.jjs</version>
+        <version>2.8.4.2</version>
     </parent>
     <artifactId>dubbo-demo-provider</artifactId>
     <packaging>war</packaging>
