--- a/dubbo-test/dubbo-test-benchmark-api/pom.xml
+++ b/dubbo-test/dubbo-test-benchmark-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-test</artifactId>
-		<version>2.8.4.1.jjs</version>
+		<version>2.8.4.2</version>
 	</parent>
 	<artifactId>dubbo-test-benchmark-api</artifactId>
 	<packaging>jar</packaging>
