--- a/dubbo-rpc/dubbo-rpc-api/pom.xml
+++ b/dubbo-rpc/dubbo-rpc-api/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>com.alibaba</groupId>
 		<artifactId>dubbo-rpc</artifactId>
-		<version>2.8.4.2</version>
+		<version>2.8.4.3</version>
 	</parent>
 	<artifactId>dubbo-rpc-api</artifactId>
 	<packaging>jar</packaging>
@@ -33,6 +33,11 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo-common</artifactId>
 			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
