--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.alibaba</groupId>
         <artifactId>dubbo-parent</artifactId>
-        <version>2.8.4.2</version>
+        <version>2.8.4.3</version>
     </parent>
     <artifactId>dubbo</artifactId>
     <packaging>jar</packaging>
@@ -547,4 +547,15 @@
             </plugin>
         </plugins>
     </build>
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://121.40.113.16:60001/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://121.40.113.16:60001/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
