--- a/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
+++ b/dubbo-admin/src/main/webapp/WEB-INF/dubbo.properties
@@ -1,3 +1,4 @@
-dubbo.registry.address=zookeeper://172.16.4.114:2181
+dubbo.registry.address=zookeeper://192.168.1.48:2181?backup=192.168.1.47:2181,192.168.1.46:2181
+zookeeper.address=192.168.1.48:2181,192.168.1.47:2181,192.168.1.46:2181
 dubbo.admin.root.password=root
 dubbo.admin.guest.password=guest
